@@ -5,6 +5,7 @@
 - resolvers: queries and mutations revision and renaming
 - resolvers: delete_topic(slug) implemented
 - resolvers: added get_shout_followers
+- resolvers: load_shouts_by filters implemented
 
 [0.2.15]
 - schema: Shout.created_by removed
